# Cat-Invaders

./: .gitignore  CMakeLists.txt
src/: EnemyAI.cpp  EnemyAI.h  EnemyAICoordinator.cpp  EnemyAICoordinator.h  EnemyCamp.cpp  EnemyCamp.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  ISerializable.h  Pointer.cpp  Pointer.h  ResourceNode.cpp  ResourceNode.h  SaveSlot.cpp  SaveSlot.h  SelectRect.cpp  SelectRect.h  Settings.cpp  Settings.h  main.cpp
src/actions/: AttackAction.cpp  AttackAction.h  BuildAction.cpp  BuildAction.h  DefendAction.cpp  DefendAction.h  IAction.h  ISkill.cpp  ISkill.h  MoveToAction.cpp  MoveToAction.h
src/buildings/: Building.cpp  Building.h  CommandCenter.cpp  CommandCenter.h  EnemyCamp.cpp  EnemyCamp.h  Hospital.cpp  Hospital.h  ResearchLab.cpp  ResearchLab.h  TrainingDen.cpp  TrainingDen.h
src/entities/: Entity.cpp  Entity.h
src/managers/: EnemyManager.cpp  EnemyManager.h  GroupManager.cpp  GroupManager.h  Managers.h  ProfileManager.cpp  ProfileManager.h  ResearchManager.cpp  ResearchManager.h  ResourceManager.cpp  ResourceManager.h  SaveManager.cpp  SaveManager.h  SelectionManager.cpp  SelectionManager.h
src/researches/: IronPawResearch.cpp  IronPawResearch.h  Research.cpp  Research.h  ResearchEffect.h  ScratcherResearch.cpp  ScratcherResearch.h  SniperResearch.cpp  SniperResearch.h
src/states/: GameState.cpp  GameState.h  MainWindowState.cpp  MainWindowState.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h
src/tilemap/: Tile.cpp  Tile.h  TileMap.cpp  TileMap.h
src/utills/: Animation.cpp  Animation.h  AnimationComponent.h  (+9 more)
(+18 files in other folders)
